--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=8.3"
+        "php": ">=8.3",
+        "symfony/yaml": "7.2.x-dev"
     },
     "autoload": {
         "psr-4": {
